style.css
html,body
{
    overflow-x: hidden; 
}

.flexbody {
    display: flex;
    min-height: 100vh;
    /* flex-direction: column; */
    background-color: rgb(228, 219, 212);
}

/* Fonts */

@font-face {
    font-family: 'mirtha_displayregular';
    src: url('./fonts/mirtha-display-regular-webfont.woff') format("woff"),
         url('./fonts/mirtha-display-regular-webfont.woff2') format("woff2");
    font-weight: normal;
    font-style: normal;
}

@font-face {
  font-family: 'cyrano_demoregular';
  src: url('./fonts/cyrano_demo-webfont.woff2') format('woff2'),
       url('./fonts/cyrano_demo-webfont.woff') format('woff');
  font-weight: normal;
  font-style: normal;

}

h2 {
  font-family: 'cyrano_demoregular';
  font-size: 65px;
  color: rgb(41, 40, 40);
}

h3 {
  font-family: 'cyrano_demoregular';
  color: rgb(234, 237, 238);
  height: 25px;
  /* margin-bottom: 30%; */
}

h5 {
  font-family: 'mirtha_displayregular';
  color: rgb(234, 237, 238);
  font-size: 35px;
  padding-top: 10px;
  padding-bottom: 0px;
  margin-bottom: 0px;
}

h4 {
  font-family: 'mirtha_displayregular';
  color: rgb(8, 49, 49);
  font-size: 25px;
  /* padding-top: 10px; */
  padding-bottom: 0px;
  margin-bottom: 0px;
  text-transform: uppercase;
}

h6 {
  font-family: 'mirtha_displayregular';
  color: rgb(187, 181, 156);
  font-size: 20px;
  text-transform: uppercase;
  /* padding-top: 10px;
  padding-bottom: 10px; */
}

p {
  font-family: 'mirtha_displayregular';
  color: rgb(214, 218, 218);
  font-size: 45px;
  /* padding-top: 10px; */
  padding-bottom: 0px;
  margin-bottom: 0px;
  text-transform: uppercase;
}

/* Nav Bar */

/* nav {
    background: #222;
    display: flex;
    height: 11vh;
    
}

.menuLink {
  padding-left: 10px;
} */

.navbar {
  background-color: rgb(36, 35, 35);
  margin-top: -10px;
  height: 80px;
}

#navlogo {
  height: 40px;
  position: absolute;
  top: 10px;
  left: 47%;
}

/* .menu {
    display: flex;
    list-style-type: none;
    list-style: none;
    text-transform: uppercase;
    align-items: center;
    padding-top: 5px;
    font-family: 'cyrano_demoregular';
} */

.topslogan {
  padding-left: 15px;
  padding-top: 30px;
  padding-bottom: 0px;
}

/* .item {
    display: flex;
    justify-content: flex-end;
    
}

a {
    color: white;
    text-decoration: none;
} */


/* START of Mobile Menu */
.nav, .desktop {
  display: block;
  position: fixed;
  top: 0px;
  left: 0px;
  width: 100%;
  z-index: 900;
  justify-content: space-between;
}

.icon {
  position: absolute;
  cursor: pointer;
  top: 2%;
  right: 0%;
  width: 40px;
  height: 45px;
  transform: translate(-50%, -50%);
  display: block;
  z-index: 1000;
}

.hamburger {
  width: 40px;
  height: 4px;
  line-height: 70px;
  background: white;
  border-radius: 5px;
  position: fixed;
  top: 70%;
  left: 50%;
  transform: translate(-50%,-50%);
  box-shadow: 0 2px 5px rgba(0,0,0,.2);
  transition: .5s;
}

.hamburger:before,
.hamburger:after {
  content: '';
  position: fixed;
  width: 40px;
  height: 4px;
  background: white;
  border-radius: 5px;
  box-shadow: 0 2px 5px rgba(0,0,0,.2);
  transition: .5s;
}

.hamburger:before {
  top: -10px;
}

.hamburger:after {
  top: 10px;
}

.icon.active .hamburger {
  /* background:rgb(228, 219, 212); */
  /* box-shadow: 0 2px 5px rgba(0,0,0,0); */
}

.icon.active .hamburger:before {
  top: 0;
  transform: rotate(45deg);
}

.icon.active .hamburger:after {
  top: 0;
  transform: rotate(135deg);
}

.menu-mobile {
  background-color: rgb(36, 35, 35);
  height: 105vh;
  position: fixed;
  width: 100%;
  top: -2%;
  z-index: 999;
  padding-top: 150px;
  text-align: center;
}

.menu-mobile, .menu-mobile a {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}
.menu-mobile a {
  clear: right;
  text-decoration: none;
  color: rgb(228, 219, 212);
  height: 80px;
  font-size: 100%;
  line-height: 70px;
}
.menu-mobile a:hover {
  color: rgb(126, 228, 197);
}

.desktop, .menu-desktop, .menu-mobile {
      display: none;
  }

#feathermenu { 
    height: 15%;
    margin-top: 5%;
    margin-bottom: 10%;
}

/* END OF Mobile Menu */


/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
  /* START of desktop menu for 768 media query */
  .menu-desktop {
      width: 100%;
      display: block;
      padding: 0;
      line-height: 50px;
      justify-content: space-evenly;
      flex-direction: row;
      height: 0;
      text-align: right;
      position: absolute;
      top: 0;
      right: 0;
  }

  .menu-desktop a {
      display: inline-flex;
      margin-right: 30px;
      height: 0;
      line-height: 50px;
      text-decoration: none;
      color: rgb(228, 219, 212);
      justify-content: space-evenly;
  }
  .menu-desktop a:hover {
    color: rgb(126, 228, 197);
  }

  .desktop {
      display: flex;
      flex-direction: row;
      justify-content: space-between;
      display: block;
  }

  header.nav, .menu-mobile {
      display: none;
  }

  /* END of desktop menu for 768 media query */

}

/* Splash Pg */

.splashbody {
    background-color: rgb(26, 33, 36);
}

.splashvid {
    /* width: 100vw; */
    display:flex;
    justify-content: center;
    height: 100vh;
    width: 100vw;
    position: absolute;
    z-index: -1;
 }

.splashlogo {
    position: absolute;
    top: 45%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 26vh;
  }

.enterbtn {
    position: absolute;
    top: 65%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 15vh;
    margin-top: 5px;
  }


  /* Hero Banner */

  .hero {
    padding-top: 25%;
    padding-bottom: 30%;
    
}



 .videoSizeControl { 
   width: 100vw;
   position: absolute;
   top: 10vh;
   z-index: -4;
   
   }

/* Main page */

.description {
  display:flex;
  justify-content: center;
  padding: 5%;
}
/* ... */

